--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   dots_indicator: ^1.0.0
   sqflite: ^1.3.0
   path_provider: ^1.1.2
+  flutter_cache_manager: ^1.4.1
+  cache_image: ^1.0.5
   ext_storage: ^1.0.3
   dio: any
   permission_handler: '^4.3.0' 
@@ -61,6 +63,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/gif/loading.gif 
     - assets/logo.png
     - assets/instagram.png
     - assets/nocover.jpg
