--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -63,8 +63,8 @@ android {
         applicationId "godo.CinePrev"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 10
-        versionName "2.1" //flutterVersionName
+        versionCode 11
+        versionName "2.2" //flutterVersionName
         // testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -92,8 +92,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.google.firebase:firebase-analytics:17.2.2'
     implementation 'com.google.firebase:firebase-storage-ktx:19.1.1'
-    implementation 'com.google.ads.mediation:adcolony:4.1.4.1'
-    implementation 'com.google.ads.mediation:applovin:9.12.6.0'
+    // implementation 'com.google.ads.mediation:adcolony:4.1.4.1'
+    // implementation 'com.google.ads.mediation:applovin:9.12.6.0'
     // implementation 'com.google.ads.mediation:facebook:5.9.0.0'
     // implementation 'com.facebook.android:facebook-android-sdk:[5,6)'
     
